--- a/WarehouseEcommerce/Views/Theme/University/Shared/_ShippingAddressSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_ShippingAddressSelector.cshtml
@@ -1,16 +1,84 @@
 ﻿@model List<Ganedata.Core.Models.AddressViewModel>
 
-
-<div class="address-wrapper">
-    <h5 class="subheadCmn">Shipping Address</h5>
-    @if (Model != null)
-    {
-        for (int i = 0; i < Model.Count; i++)
+<div class="addNwAdrrFormWrap">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="form-group">
+                <div class="findAddrWrap">
+                    <input type="text" id="shipping-address-post-code__input" class="findAddrInput shipping-target-postCode" placeholder="Enter Postcode" />
+                    <button class="fadBtn" onclick="selectPostCode();">Check</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-3">
+        @if (Model != null)
         {
-            if (Model.ElementAtOrDefault(i) != null)
+            for (int i = 0; i < Model.Count; i++)
             {
-                @Html.Partial("_AddressDetail", Model[i])
+                if (Model.ElementAtOrDefault(i) != null)
+                {
+                    <div class="col-lg-6">
+                        <div class="billigAddrWrap collection-address-div" onclick="selectShippingAddressId(@Model[i].AddressID, '@Model[i].PostCode', this)">
+                            <p class="address">
+                                @if (!string.IsNullOrEmpty(Model[i].AddressLine1))
+                                {
+                                    @Model[i].AddressLine1<br />
+                                }
+                                @if (!string.IsNullOrEmpty(Model[i].AddressLine2))
+                                {
+                                    @Model[i].AddressLine2<br />
+                                }
+                                @if (!string.IsNullOrEmpty(Model[i].AddressLine3) || !string.IsNullOrEmpty(Model[i].PostCode))
+                                {
+                                    @Model[i].AddressLine3 <span>&nbsp;</span> @Model[i].PostCode<br />
+                                }
+                                @if (Model[i].GlobalCountry != null)
+                                {
+                                    @Model[i].GlobalCountry.CountryName<br />
+                                }
+                                @if (!string.IsNullOrEmpty(Model[i].Telephone))
+                                {
+                                    <span>Phone:</span> @Model[i].Telephone<br />
+                                }
+                            </p>
+                        </div>
+                    </div>
+                }
             }
         }
-    }
+    </div>
 </div>
+<script>
+    function selectShippingAddressId(id, postCode, element) {
+        $(element).addClass("collection-point-selected");
+
+        if ($("#shippingAddressId").length > 0) {
+            $("#shippingAddressId")[0].value = id;
+        }
+
+        if ($("#shippingAddressPostCode").length > 0) {
+            $("#shippingAddressPostCode")[0].value = postCode;
+        }
+
+        if (!!onShippingAddressSelected && typeof onShippingAddressSelected === "function") {
+            onShippingAddressSelected(id, postCode)
+        }
+    }
+
+    function selectPostCode() {
+        var postCode = $(".shipping-target-postCode").val();
+
+        if ($("#shippingAddressPostCode").length > 0) {
+            $("#shippingAddressPostCode")[0].value = postCode;
+        }
+
+        if ($("#shippingAddressId").length > 0) {
+            $("#shippingAddressId")[0].value = null;
+        }
+
+        if (!!setSelectedShippingAddress && typeof setSelectedShippingAddress === "function") {
+            setSelectedShippingAddress(null, postCode)
+        }
+    }
+</script>
